--- a/static/displayscreen.html
+++ b/static/displayscreen.html
@@ -43,10 +43,10 @@ meter::-webkit-meter-optimum-value {
 <body>
 
 <p>Display a gauge:</p>
-<br><br>1 <meter id="meter1" value="0" min="0" max="10"></meter>
-<br><br>2 <meter id="meter2" value="0" min="0" max="10"></meter>
-<br><br>3 <meter id="meter3" value="0" min="0" max="10"></meter>
-<br><br>4 <meter id="meter4" value="0" min="0" max="10"></meter>
+<br><br>1 <meter id="meter1" value="0" min="0" max="50"></meter>
+<br><br>2 <meter id="meter2" value="0" min="0" max="50"></meter>
+<br><br>3 <meter id="meter3" value="0" min="0" max="50"></meter>
+<br><br>4 <meter id="meter4" value="0" min="0" max="50"></meter>
 <br><br>
 
 
@@ -59,22 +59,37 @@ meter::-webkit-meter-optimum-value {
 </html>
 
 <script>
-
-var socket = io.connect();
+var socket = io('/display');
 
 $( document ).ready(function() {
     console.log( "ready!" );
 
-    setInterval(function(){
-        $( "#meter1" ).animate({
-            value: Math.random()*10,
-          }, 400, function() {
-            // Animation complete.
-          });
-        },500);
+//    setInterval(function(){
+//        $( "#meter1" ).animate({
+//            value: Math.random()*10,
+//          }, 400, function() {
+//            // Animation complete.
+//          });
+//        },500);
     
 
+
+
+}); //end document ready
+
+socket.on('clientUpdate', function(data) { //client dancability info
+	console.log(data);
+    $( "#meter1" ).animate({
+        value: data.danceScore,
+      }, 225, function() {
+        // Animation complete.
+      });
+    
+	
+	
 });
+
+
 
 
 </script>
