More refinements, auto-load

--- a/static/index.html
+++ b/static/index.html
@@ -24,11 +24,8 @@
 
     <div style="position: absolute; left: 0px; top: 0px; background-color:#222222; color: white; font-family:Sans; font-size:6vw; height:10vw; width:10vw;" id="slot"></div>
 <div style="background-color:black; height:100%; width:100%; touch-action: none;" id="wholepage">
-
-    <div style="position: absolute; right: 25vw; top: 25vw; background-color:grey; height:50vw; width:50vw;" id="thebutton">
-    </div>
-    <div style="position: absolute; right: 0px; top: 100vw; background-color:black; color: white; font-family:Sans; height:50vw; width:100vw;" id="console">
-    </div>                                                                                                                                   
+    <div style="position: absolute; right: 25vw; top: 25vw; background-color:grey; height:50vw; width:50vw;" id="thebutton"></div>
+    <div style="position: absolute; right: 0px; top: 100vw; background-color:black; color: white; font-family:Sans; height:50vw; width:100vw;" id="console"></div>                                                                                                                                   
 
     
 </div>
