I think I fixed the mousedown issue and console messages

--- a/static/displayscreen.html
+++ b/static/displayscreen.html
@@ -79,6 +79,10 @@ var loadRandomSong= function(){
  drums=[]; 
  bass=[];  
  sink=[];  
+ foundVocal=false;
+ foundSong=false;
+
+
  
  var iType;
  var s=Math.floor(Math.random() * manifest.length);
