Phone UI is basically complete. Might add vibration for second countdown.
Probably a good idea to keep people from walking away with this going in
their pocket.

--- a/static/displayscreen.html
+++ b/static/displayscreen.html
@@ -193,8 +193,8 @@ loadSongTracks(s,0); //start with track 0
 
 
 var loadSongTracks = function(s,t){
-console.log ("waiting 2 seconds")
-setTimeout(function(){immediatelyLoadSongTracks(s,t)},2000);
+console.log ("waiting 200 ms")
+setTimeout(function(){immediatelyLoadSongTracks(s,t)},200);
     
 }
 
