--- a/static/displayscreen.html
+++ b/static/displayscreen.html
@@ -341,7 +341,7 @@ visibility: hidden;
 </html>
 
 <script>
-var debugMainScreen=true;  //change this to true if you need to work on the main title screen.
+var debugMainScreen=false;  //change this to true if you need to work on the main title screen.
 
 
 var socket = io('/display');
