Turning off debug mode. Let's call this RC2
Also added a user vibration and initial console message upon connect to
as to hasten user interaction

--- a/static/index.html
+++ b/static/index.html
@@ -419,6 +419,8 @@ socket.on('command', function(data) { //incoming server instructions
             assignedSlot=data.parameter;
             $("#theButtonUp").css("background-image", 'url("button_' + assignedSlot + '_up.png")');
             $("#theButtonDown").css("background-image", 'url("button_' + assignedSlot + '_down.png")');
+            $("#console").html("PUSH THE BUTTON!");
+            navigator.vibrate(100);
 
           //  console.log("buttonpushed",buttonPushed, "fingersdown", fingersDown);
           //  if (buttonPushed){
