7 minute meta refresh backup!

--- a/static/displayscreen.html
+++ b/static/displayscreen.html
@@ -1,7 +1,10 @@
  <!DOCTYPE html>
 <html>
 
-<head><title>NOISEY.SPACE</title>
+<head>
+<meta http-equiv="refresh" content="420">    
+    <title>NOISEY.SPACE</title>
+
 </head>
 
 
