Rudimentary anti-pocket-dial protection
User has do do a PROPER interaction after 15 seconds. Ultimately, I
don't like this for the long-term because it discourages restraint. But
for this installation, it's probably for the best.

--- a/static/displayscreen.html
+++ b/static/displayscreen.html
@@ -757,8 +757,12 @@ $( document ).ready(function() {
 socket.on('command', function(data) { //client dancability info
 
     if (data.command==="secondsLeft"){
-    $("#console"+(data.slot+1)).html("PUSH THE BUTTON!  " + data.parameter);
+        if (slot[data.slot].buttonPushed){
+          $("#console"+(data.slot+1)).html("NOW DANCE!  " + data.parameter);
+        }else{
+          $("#console"+(data.slot+1)).html("PUSH THE BUTTON!  " + data.parameter);
         }
+    }
     else if (data.command==="assignSlot"){
         $( "#box"+(data.slot+1)).css("background-color", "#AAAAAA");
         $( "#box"+(data.slot+1)).css("color", "#000000");
@@ -788,8 +792,8 @@ socket.on('clientDance', function(data) { //client dancability info
 
 if (data.slot<3){
  
-     if (data.danceScore>10 && data.buttonPushed===false){$("#console"+(data.slot+1)).html("PUSH THE BUTTON!");}
-     if (data.danceScore<10 && data.buttonPushed===true){$("#console"+(data.slot+1)).html("NOW DANCE!");}
+     //if (data.danceScore>10 && data.buttonPushed===false){$("#console"+(data.slot+1)).html("PUSH THE BUTTON!");}
+     //if (data.danceScore<10 && data.buttonPushed===true){$("#console"+(data.slot+1)).html("NOW DANCE!");}
      if (data.danceScore>10 && data.buttonPushed===true){$("#console"+(data.slot+1)).html("KEEP DANCING!");}
     
     
