--- a/static/displayscreen.html
+++ b/static/displayscreen.html
@@ -295,7 +295,7 @@ visibility: hidden;
     
     <div id="sidebar"><div id="logo_backdrop" style="background-color: #ff5555; margin:0px;"><img id="ns_sidebar" src="ns_condensed_transparent.png" style="width:100%"></div>
      <div style="position:absolute; top:30vh; width:100%; margin-top:1em; color:grey">Connect to:
-         <div style="width:100%; margin-top:2em"><span style="font-size:2.3em">NS.BOX.BZ</span></div>
+         <div style="width:100%; margin-top:2em"><span style="font-size:2.3em">NS.MOD.BZ</span></div>
          <div style="width:100%; margin-top:0.75em; color:grey">or</div>
          <div style="width:100%; margin-top:0.75em; color:white">http://nois<span id="thee" style="color:#FF5555">e</span>y.space</div>
          <div style="width:100%; margin-top:2em; color:grey">...on your mobile browser to play.</div>
