Turning off Debug.
OK, we're ready to release 1.0.3

--- a/static/displayscreen.html
+++ b/static/displayscreen.html
@@ -346,7 +346,7 @@ visibility: hidden;
 
 <script>
 //Change these three variables depending on if you're debugging it and where you want your various audio assets to sit
-var debugMainScreen=true;  //change this to true if you need to work on the main title screen.
+var debugMainScreen=false;  //change this to true if you need to work on the main title screen.
 var oggHTTPserver='http://localhost:8080/';
 var soundAssetsServer= '' //change to oggHTTPserver to server all your audio assets from the stems server to save bandwidth. Must copy BitQuestLoop.ogg and ding.ogg to root dir of stems http. Actually, don't do this yet. The indexer can't handle it.
 
